--- a/components/go-pfeqgkhl/overlays/development/deployment-patch.yaml
+++ b/components/go-pfeqgkhl/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-pfeqgkhl
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-pfeqgkhl:f195694b6683221d991639c04b01c212b2e1996c@sha256:933c54fb4f3f0e1c53eacf6fb3b7e47b70f1bf9bfea1e72315694aa6e0b26679
+          name: container-image
